--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-	"name": "mediatr",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"name": "tiny-mediatr",
+	"version": "0.0.0",
+	"description": "In-process messaging with no dependencies in TypeScript.",
+	"main": "index",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build:watch": "tsc --watch"
+		"test": "jest --runInBand --detectOpenHandles --no-cache",
+		"test:majestic": "majestic",
+		"start": "ts-node src/index.ts",
+		"build:watch": "tsc --watch",
+		"build": "tsc",
+		"prebuild": "del-cli ./dist/",
+		"postbuild": "cpy 'readme.md' 'package.json' ./dist/ --no-overwrite --parents",
+		"release": "release-it"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,8 +20,15 @@
 		"tiny-injector": "^0.1.1"
 	},
 	"devDependencies": {
+		"@release-it/conventional-changelog": "^5.1.1",
 		"@types/express": "^4.17.14",
+		"@types/jest": "^29.2.4",
+		"cpy-cli": "^4.2.0",
+		"del-cli": "^5.0.0",
 		"express": "^4.18.2",
+		"jest": "^29.3.1",
+		"majestic": "^1.8.1",
+		"ts-jest": "^29.0.3",
 		"typescript": "^4.9.4"
 	}
 }
