--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "tiny-mediatr",
+	"name": "@faslh/tiny-mediatr",
 	"version": "0.0.0",
-	"description": "In-process messaging with no dependencies in TypeScript.",
+	"description": "In-process messaging in TypeScript.",
 	"main": "index",
 	"scripts": {
 		"test": "jest --runInBand --detectOpenHandles --no-cache",
@@ -13,11 +13,54 @@
 		"postbuild": "cpy 'readme.md' 'package.json' ./dist/ --no-overwrite --parents",
 		"release": "release-it"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"keywords": [
+		"in process messaging",
+		"mediatr",
+		"event bus",
+		"cqs"
+	],
+	"author": "ezzabuzaid",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/faslh/tiny-mediatr.git.git"
+	},
+	"bugs": {
+		"url": "https://github.com/faslh/tiny-mediatr/issues"
+	},
+	"homepage": "https://github.com/faslh/tiny-mediatr#readme",
 	"peerDependencies": {
 		"tiny-injector": "^0.1.1"
+	},
+	"private": false,
+	"release-it": {
+		"plugins": {
+			"@release-it/conventional-changelog": {
+				"preset": "conventionalcommits",
+				"infile": "CHANGELOG.md"
+			}
+		},
+		"git": {
+			"requireBranch": "main",
+			"requireCleanWorkingDir": true,
+			"requireCommits": true,
+			"requireUpstream": true,
+			"tag": true
+		},
+		"github": {
+			"release": true
+		},
+		"npm": {
+			"publish": true,
+			"publishPath": "./dist"
+		},
+		"hooks": {
+			"after:bump": "npm run build",
+			"after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+		}
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"devDependencies": {
 		"@release-it/conventional-changelog": "^5.1.1",
@@ -28,6 +71,7 @@
 		"express": "^4.18.2",
 		"jest": "^29.3.1",
 		"majestic": "^1.8.1",
+		"release-it": "^15.6.0",
 		"ts-jest": "^29.0.3",
 		"typescript": "^4.9.4"
 	}
