--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Create .npmrc
         run: |
-          echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' >> .npmrc
+          echo '//registry.npmjs.org/:_authToken=${{secrets.NPM_TOKEN}}' >> .npmrc
 
       - run: npm install
 
